# gn-ai

./: .gitignore  LICENSE  README.md
ai_search/: pyproject.toml
ai_search/src/: config.py  main.py  rag.py
ai_search/utils/: new_rdf2partial_text.py
aisearch/: .env.example  README.md  pyproject.toml
aisearch/data/: full_benchmark.csv  gnai_benchmark.csv  gnai_benchmark.tsv  small_benchmark.csv
aisearch/scripts/: agent_search.py  dspy_evaluate.py  evaluate.py  fetch_metadata.py  grag_search.py  new_rdf2partial_text.py  rag_search.py  ragent_search.py  rdf2partial_text.py  simple_evaluate.py
aisearch/src/: config.py  main.py  rag.py  search.py
aisearch/src/agent/: search.py
aisearch/src/gnais/: config.py  rag.py  search.py  utils.py
aisearch/src/gnais/agent/: agent.py  search.py
aisearch/src/gnais/evaluation/: utils.py
aisearch/src/gnais/rag/: __init__.py  config.py  grag.py  grag_search.py  rag.py  rag_search.py  search.py
aisearch/src/gnais/ragent/: __init__.py  ragent.py  search.py
aisearch/src/gnais/search/: __init__.py  agent.py  classification.py  config.py  corpus.py  grag.py  prompts.py  rag.py  ragent.py  tools.py
aisearch/src/rag/: config.py  search.py
aisearch/src/web/: app.py  auth.py  settings.py
aisearch/src/web/static/css/: style.css
aisearch/src/web/templates/: index.html  login.html  settings.html
aisearch/src/web/templates/partials/: response.html  response_body.html  stream_shell.html
gnagent/src/: config.py
