[project]
name = "gnais"
version = "0.1.6"
description = "Seach tool powered with AI to access GeneNetwork metadata"
authors = [
    {name = "Johannes Medagbe", email = "johanmedagbe@gmail.com"}
]
maintainers = [
    {name = "Johannes Medagbe", email = "johanmedagbe@gmail.com"},
    {name = "Munyoki Kilyungi", email = "me@bonfacemunyoki.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "chromadb (>=1.5.0,<2.0.0)",
    "dspy (>=3.1.3,<4.0.0)",
    "flask (==3.1.0)",
    "langchain (==0.3.26)",
    "langchain-community (==0.3.27)",
    "pydantic (>=2.12.5,<3.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",    
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
]

[project.urls]
Homepage = "https://github.com/genenetwork/gn-ai"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
