[project]
name = "gnais"
version = "0.4.0"
description = "Seach tool powered with AI to access GeneNetwork metadata"
authors = [
    {name = "Johannes Medagbe", email = "johanmedagbe@gmail.com"}
]
maintainers = [
    {name = "Johannes Medagbe", email = "johanmedagbe@gmail.com"},
    {name = "Munyoki Kilyungi", email = "me@bonfacemunyoki.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "authlib (==1.5.1)",
    "chromadb (>=1.5.0,<2.0.0)",
    "requests (==2.32.5)",
    "dspy (>=3.1.3,<4.0.0)",
    "flask-caching (==2.3.1)",
    "flask-limiter (==4.1.1)",
    "langchain (==1.2.10)",
    "langchain-community (==0.4.1)",
    "langchain-core (==1.2.17)",
    "langgraph (==1.0.10)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (==1.1.1)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "redis (==7.1.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",    
    "sparqlwrapper (>=2.0.0,<3.0.0)",    
    "langchain-classic (>=1.0.2,<2.0.0)",    
    "langchain-huggingface (>=1.2.1,<2.0.0)",
    "quart (==0.20.0)",
    "quart-flask-patch (==0.3.0)",
    "mem0ai[nlp] (>=0.1.0,<1.0.0)",
    "rich (==13.9.4)"
]

[project.urls]
Homepage = "https://github.com/genenetwork/gn-ai"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
